--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>Hello, Musical-Broccoli !</title>
 </head>
 <body>
+  <div id="canvas-wrap">
+  <canvas id="rain-something">
+  </canvas>
+</div>
+
+
+
   <script src="app.js"></script>
 </body>
 </html>
