height as viewport

--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
   <title>Hello, Musical-Broccoli !</title>
 </head>
 <body>
-  <div id="canvas-wrap">
-  <canvas id="rain-something">
+  <div id="canvas-wrap" style="height:100vh;">
+  <canvas id="rain-something">   
   </canvas>
 </div>
-
-
-
   <script src="app.js"></script>
 </body>
 </html>
